correction of error in compilation stiles

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -953,7 +953,7 @@
     }
     .main-top-content-pointer {
         margin-top: 14.5px;
-        margin-bottom: 10px);
+        margin-bottom: 10px;
     }
     .main-top-content-button {
         width: 132px;
